[package]
name = "ace_of_spades"
version = "0.0.1"
authors = ["Nils Eriksson <nils.edvin.eriksson@outlook.com>"]
edition = "2018"

[lib]
name = "aces_high" # Final name of library

[dependencies]
rand = "0.7"
log = "0.4"
# arrayref = "0.3.5"
seq-macro = "0.1"
num-derive = "0.3.0"
num-traits = "0.2.11"
variant_count = "1.0.0"
mimpl = { path = "C:/Users/nils/Development/mimpl" }
