[package]
name = "ace_of_spades"
version = "0.0.1"
authors = ["Nils Eriksson <nils.edvin.eriksson@outlook.com>"]
edition = "2018"

[lib]
name = "aces_high" # Final name of library

[dependencies]
rand = "0.7.3"
log = "0.4.8"
# arrayref = "0.3.5"
seq-macro = "0.1.4"
num-derive = "0.3.0"
num-traits = "0.2.11"
enum_derive = "0.1.7"
custom_derive = "0.1.7"
variant_count = "1.0.0"
mimpl = { git = "https://github.com/sesar54/mimpl.git" }
rayon = "1.3.0"
strum = "0.17.1"
strum_macros = "0.17.1"
